TDP-014: fix the horizontal scroll in mobile view

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -174,6 +174,16 @@ code {
 }
 
 @media (max-width: 767px) {
+
+  .container-fluid {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .row {
+    width: 90%;
+  }
+
   #navbar {
     width: 100%;
     opacity: .9;
